--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Tribute</title>
     <link rel="stylesheet" type="text/css" href="css/css.css">
-    <script></script>
+    <script src="https://cdn.freecodecamp.org/testable-projects-fcc/v1/bundle.js."></script>
 </head>
     <body>
         <div id="main">
